log/build_2025-11-20_11-31-03/mcap_streamer/stderr.log
/home/linjiawei/load_mcap/src/mcap_streamer/src/mcap_example.cpp: In lambda function:
/home/linjiawei/load_mcap/src/mcap_streamer/src/mcap_example.cpp:469:77: error: ‘VehicleReportCommon’ is not a member of ‘deva_control_msgs::msg’
  469 |                         self->deserialize_and_print<deva_control_msgs::msg::VehicleReportCommon>(msg, topic);
      |                                                                             ^~~~~~~~~~~~~~~~~~~
/home/linjiawei/load_mcap/src/mcap_streamer/src/mcap_example.cpp: In instantiation of ‘MCapExample::init_deserialize_handlers(const std::set<std::__cxx11::basic_string<char> >&)::<lambda(MCapExample*)>::<lambda(auto:116, auto:117)> [with auto:116 = std::shared_ptr<rclcpp::SerializedMessage>; auto:117 = std::__cxx11::basic_string<char>]’:
/usr/include/c++/11/type_traits:2536:26:   required by substitution of ‘template<class _Fn, class ... _Args> static std::__result_of_success<decltype (declval<_Fn>()((declval<_Args>)()...)), std::__invoke_other> std::__result_of_other_impl::_S_test(int) [with _Fn = MCapExample::init_deserialize_handlers(const std::set<std::__cxx11::basic_string<char> >&)::<lambda(MCapExample*)>::<lambda(auto:116, auto:117)>&; _Args = {std::shared_ptr<rclcpp::SerializedMessage>, const std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >&}]’
/usr/include/c++/11/type_traits:2547:55:   required from ‘struct std::__result_of_impl<false, false, MCapExample::init_deserialize_handlers(const std::set<std::__cxx11::basic_string<char> >&)::<lambda(MCapExample*)>::<lambda(auto:116, auto:117)>&, std::shared_ptr<rclcpp::SerializedMessage>, const std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >&>’
/usr/include/c++/11/bits/std_function.h:348:9:   recursively required by substitution of ‘template<class _Result, class _Ret> struct std::__is_invocable_impl<_Result, _Ret, true, std::__void_t<typename _CTp::type> > [with _Result = std::__invoke_result<MCapExample::init_deserialize_handlers(const std::set<std::__cxx11::basic_string<char> >&)::<lambda(MCapExample*)>::<lambda(auto:116, auto:117)>&, std::shared_ptr<rclcpp::SerializedMessage>, const std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >&>; _Ret = void]’
/usr/include/c++/11/bits/std_function.h:348:9:   required from ‘struct std::function<void(std::shared_ptr<rclcpp::SerializedMessage>, const std::__cxx11::basic_string<char>&)>::_Callable<MCapExample::init_deserialize_handlers(const std::set<std::__cxx11::basic_string<char> >&)::<lambda(MCapExample*)>::<lambda(auto:116, auto:117)>, MCapExample::init_deserialize_handlers(const std::set<std::__cxx11::basic_string<char> >&)::<lambda(MCapExample*)>::<lambda(auto:116, auto:117)>, std::__invoke_result<MCapExample::init_deserialize_handlers(const std::set<std::__cxx11::basic_string<char> >&)::<lambda(MCapExample*)>::<lambda(auto:116, auto:117)>&, std::shared_ptr<rclcpp::SerializedMessage>, const std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >&> >’
/usr/include/c++/11/bits/std_function.h:353:8:   required by substitution of ‘template<class _Res, class ... _ArgTypes> template<class _Cond, class _Tp> using _Requires = std::__enable_if_t<_Cond::value, _Tp> [with _Cond = std::function<void(std::shared_ptr<rclcpp::SerializedMessage>, const std::__cxx11::basic_string<char>&)>::_Callable<MCapExample::init_deserialize_handlers(const std::set<std::__cxx11::basic_string<char> >&)::<lambda(MCapExample*)>::<lambda(auto:116, auto:117)>, MCapExample::init_deserialize_handlers(const std::set<std::__cxx11::basic_string<char> >&)::<lambda(MCapExample*)>::<lambda(auto:116, auto:117)>, std::__invoke_result<MCapExample::init_deserialize_handlers(const std::set<std::__cxx11::basic_string<char> >&)::<lambda(MCapExample*)>::<lambda(auto:116, auto:117)>&, std::shared_ptr<rclcpp::SerializedMessage>, const std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >&> >; _Tp = void; _Res = void; _ArgTypes = {std::shared_ptr<rclcpp::SerializedMessage>, const std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >&}]’
/usr/include/c++/11/bits/std_function.h:434:9:   required by substitution of ‘template<class _Functor, class _Constraints> std::function<void(std::shared_ptr<rclcpp::SerializedMessage>, const std::__cxx11::basic_string<char>&)>::function(_Functor&&) [with _Functor = MCapExample::init_deserialize_handlers(const std::set<std::__cxx11::basic_string<char> >&)::<lambda(MCapExample*)>::<lambda(auto:116, auto:117)>; _Constraints = <missing>]’
/home/linjiawei/load_mcap/src/mcap_streamer/src/mcap_example.cpp:470:21:   required from here
/home/linjiawei/load_mcap/src/mcap_streamer/src/mcap_example.cpp:469:97: error: no matching function for call to ‘MCapExample::<expression error>(std::shared_ptr<rclcpp::SerializedMessage>&, std::__cxx11::basic_string<char>&)’
  469 |                         self->deserialize_and_print<deva_control_msgs::msg::VehicleReportCommon>(msg, topic);
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~
/home/linjiawei/load_mcap/src/mcap_streamer/src/mcap_example.cpp:574:10: note: candidate: ‘template<class T> void MCapExample::deserialize_and_print(std::shared_ptr<rclcpp::SerializedMessage>, const string&)’
  574 |     void deserialize_and_print(std::shared_ptr<rclcpp::SerializedMessage> serialized_msg,
      |          ^~~~~~~~~~~~~~~~~~~~~
/home/linjiawei/load_mcap/src/mcap_streamer/src/mcap_example.cpp:574:10: note:   template argument deduction/substitution failed:
gmake[2]: *** [CMakeFiles/mcap_example.dir/build.make:76: CMakeFiles/mcap_example.dir/src/mcap_example.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:193: CMakeFiles/mcap_example.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
